# immich-exif-tool

./: .env.example  .gitignore  Cargo.toml  README.md
src/: dump.rs  exiftool.rs  fix.rs  main.rs  plan_file.rs  progress.rs  scan.rs
src/commands/: apply.rs  mod.rs  plan.rs  pull.rs
src/exif/: datetime.rs  exiftool.rs  mod.rs
src/immich/: local.rs  mod.rs  remote.rs  types.rs
src/plan/: datetime.rs  exiftool.rs  file.rs  mod.rs
src/pull/: file.rs  immich.rs  mod.rs
