[package]
name = "liams-immich-exif-tool"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "env"] }
console = "0.16.3"
dotenvy = "0.15.7"
indicatif = "0.18.4"
jiff = { version = "0.2.24", features = ["serde"] }
rayon = "1.12.0"
reqwest = { version = "0.13.3", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
urlencoding = "2.1.3"
walkdir = "2.5.0"
