[package]
name = "liams-immich-exif-tool"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "env"] }
comfy-table = "7.2.2"
dotenvy = "0.15.7"
indicatif = "0.18.4"
jiff = { version = "0.2.24", features = ["serde"] }
reqwest = { version = "0.13.3", features = ["blocking"] }
rustc-hash = "2.1.2"
serde = { version = "1.0.228", features = ["derive"] }
sonic-rs = "0.5.8"
urlencoding = "2.1.3"
walkdir = "2.5.0"
